<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.upload.AddImageFragment"
    android:background="@color/background"
    android:paddingTop="@dimen/_25sdp">


    <ImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|top"
        android:layout_margin="@dimen/_10sdp"
        android:background="@drawable/button_background"
        android:contentDescription="@string/back"
        android:padding="@dimen/_10sdp"
        android:src="@drawable/baseline_arrow_back_24"
        app:tint="@color/darkGrey" />







      <androidx.cardview.widget.CardView
          android:id="@+id/image_card"
          android:transitionName="edit_image"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="top|end"
          android:backgroundTint="@color/white"
          app:cardCornerRadius="@dimen/_3sdp"
          android:layout_marginTop="@dimen/_10sdp"
          android:layout_marginEnd="@dimen/_16sdp"
          android:paddingHorizontal="@dimen/_3sdp"
          android:animateLayoutChanges="true"
          >
          <ImageView
              android:id="@+id/image"
              android:layout_height="wrap_content"
              android:layout_width="wrap_content"
              android:src="@drawable/image_not_found"
              android:maxWidth="@dimen/_80sdp"
              android:maxHeight="@dimen/_110sdp"
              android:adjustViewBounds="true"
              android:layout_marginStart="@dimen/_3sdp"
              android:layout_marginEnd="@dimen/_3sdp"
              android:layout_marginTop="@dimen/_3sdp"
              android:layout_marginBottom="@dimen/_10sdp"
              android:contentDescription="@string/uploaded_image"
              />
      </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:layout_gravity="center|end"
        android:layout_marginBottom="@dimen/_90sdp"
        android:textColor="#FA2F2F"
        android:textStyle="bold|italic"
        android:textSize="@dimen/_15ssp"
        android:layout_marginEnd="@dimen/_20sdp"
        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center"
        android:orientation="vertical"
        >

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/videoPreview"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:contentDescription="@string/uploaded_image"
            android:src="@drawable/video_not_found"
            android:background="#0E1117"
            android:scaleType="centerCrop"
            app:shapeAppearance="@style/roundImageView" />

        <TextView
            android:id="@+id/videoTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_video"
            android:textStyle="italic|bold"
            android:layout_marginTop="@dimen/_20sdp"
            android:textColor="#717171"
            android:textSize="@dimen/_15ssp" />
    </LinearLayout>

    <Button
        android:id="@+id/update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginHorizontal="@dimen/_35sdp"
        android:layout_marginVertical="@dimen/_20sdp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/button_state_colors"
        android:drawableTint="@color/white"
        android:enabled="false"
        android:paddingVertical="@dimen/_8sdp"
        android:text="@string/update"
        android:textColor="@color/button_text_colors"
        android:textSize="@dimen/_18ssp"

       />
    <!--        android:backgroundTint="#0094FF"-->

</FrameLayout>